--- a/.github/workflows/android-workflow.yaml
+++ b/.github/workflows/android-workflow.yaml
@@ -4,7 +4,7 @@ on: [push]
 jobs:
   build-and-test:
     name: Build and run tests
-    runs-on: ubuntu-latest
+    runs-on: macos-latest 
     steps:
       - name: Checkout current repository in ubuntu's file system 
         uses: actions/checkout@v1
@@ -25,4 +25,9 @@ jobs:
           avd-name: test
           emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim -camera-back none
           disable-animations: true
-          script: ./gradlew connectedCheck
+          script: ./gradlew connectedChec
+      - name: Upload Reports
+              uses: actions/upload-artifact@v1
+        with:
+           name: reports
+           path: app/build/reportsk
