--- a/.github/workflows/android-workflow.yaml
+++ b/.github/workflows/android-workflow.yaml
@@ -6,16 +6,21 @@ jobs:
     name: Build and run tests
     runs-on: macos-latest 
     steps:
+
       - name: Checkout current repository in ubuntu's file system 
         uses: actions/checkout@v1
+
       - name: Setup JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+
       - name: Print contents in current directory
         run: ls -la
-      - name: Unit tests
+
+      - name: Run unit tests
         run: ./gradlew testDebugUnitTest
+
       - name: Run instrumentation tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
@@ -25,7 +30,8 @@ jobs:
           avd-name: test
           emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim -camera-back none
           disable-animations: true
-          script: ./gradlew connectedChec
+          script: ./gradlew connectedCheck
+
       - name: Upload Reports
         uses: actions/upload-artifact@v1
         with:
