--- a/.github/workflows/android-workflow.yaml
+++ b/.github/workflows/android-workflow.yaml
@@ -30,7 +30,7 @@ jobs:
           avd-name: test
           emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim -camera-back none
           disable-animations: true
-          script: ./gradlew connectedCheck
+          script: mv /Users/runner/Library/Android/sdk/ndk-bundle /Users/runner/Library/Android/sdk/ndk/ && ./gradlew connectedCheck
 
       - name: Upload Reports
         uses: actions/upload-artifact@v1
