--- a/.github/workflows/android-workflow.yaml
+++ b/.github/workflows/android-workflow.yaml
@@ -27,6 +27,7 @@ jobs:
           api-level: 30
           arch: x86
           profile: Nexus 6
+          ndk: 21.4.7075529
           avd-name: test
           emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim -camera-back none
           disable-animations: true
