--- a/.github/workflows/android-workflow.yaml
+++ b/.github/workflows/android-workflow.yaml
@@ -23,9 +23,9 @@ jobs:
 
       - name: Run unit tests
         run: ./gradlew testDebugUnitTest
-        
-      - name: Upload reports
- 	uses: actions/upload-artifact@v1
+
+      - name: Upload Reports
+        uses: actions/upload-artifact@v1
         with:
            name: reports
-           path: app/build/reports
+           path: app/build/reports       
