--- a/.github/workflows/android-workflow.yaml
+++ b/.github/workflows/android-workflow.yaml
@@ -13,6 +13,7 @@ jobs:
       uses: reactivecircus/android-emulator-runner@v2
       with:
         api-level: 30
+	target: google_apis
 	arch: x86
         profile: Pixel 4 API 30
         script: ./gradlew connectedCheck
