--- a/.github/workflows/android-workflow.yaml
+++ b/.github/workflows/android-workflow.yaml
@@ -25,10 +25,10 @@ jobs:
       - name: Run unit tests
         run: ./gradlew testDebugUnitTest
 
-      - name: run tests
+      - name: Run instrumentation tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 29
+          api-level: 30
           script: ./gradlew connectedCheck
 
       - name: Upload Reports
