--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.1.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.apollographql.apollo:apollo-gradle-plugin:2.5.4"
+        classpath "org.jacoco:org.jacoco.core:0.8.5"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
