--- a/Realtime-Transport-Updates-API/docker-compose.yml
+++ b/Realtime-Transport-Updates-API/docker-compose.yml
@@ -6,5 +6,5 @@ services:
         ports:
             - '1433:1433'
         environment: 
-            SA_PASSWORD: '10Password'
+            SA_PASSWORD: 10Password
             ACCEPT_EULA: 'Y'
