--- a/Realtime-Transport-Updates-API/.env.example
+++ b/Realtime-Transport-Updates-API/.env.example
@@ -4,10 +4,10 @@ HOST=localhost
 HOST_URL=http://localhost:3000
 
 # Azure SQL server config (Optional)
-SQL_USER=hslAndroidApp
-SQL_PASSWORD=DuLwB99RtGJFyrU
-SQL_SERVER=hsl-ar.database.windows.net
-SQL_DATABASE=hsl-gtfs-static
+SQL_USER=1PASSWORD
+SQL_PASSWORD=1PASSWORD
+SQL_SERVER=1PASSWORD
+SQL_DATABASE=1PASSWORD
 SQL_ENCRYPT=true
 
 # Docker SQL server container
