--- a/NokiaHslVisualisation/app/src/main/AndroidManifest.xml
+++ b/NokiaHslVisualisation/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
             </intent-filter>
         </activity>
 
-        <service android:name="org.eclipse.paho.android.service.MqttService" >
+        <service
+            android:name="org.eclipse.paho.android.service.MqttService" >
         </service>
     </application>
 
