--- a/NokiaHslVisualisation/app/src/main/AndroidManifest.xml
+++ b/NokiaHslVisualisation/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
         </activity>
 
         <service
-            android:name="org.eclipse.paho.android.service.MqttService" >
+            android:name="org.eclipse.paho.android.service.MqttService"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            >
         </service>
     </application>
 
