--- a/Realtime-Transport-Updates-API/.env.example
+++ b/Realtime-Transport-Updates-API/.env.example
@@ -3,11 +3,11 @@ PORT=3000
 HOST=localhost
 HOST_URL=http://localhost:3000
 
-# Azure SQL server config (Optional)
-SQL_USER=1PASSWORD
-SQL_PASSWORD=1PASSWORD
-SQL_SERVER=1PASSWORD
-SQL_DATABASE=1PASSWORD
+# Azure SQL server config
+SQL_USER=?
+SQL_PASSWORD=?
+SQL_SERVER=?
+SQL_DATABASE=?
 SQL_ENCRYPT=true
 
 # Docker SQL server container
