--- a/NokiaHslVisualisation/build.gradle
+++ b/NokiaHslVisualisation/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.2"
+        classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.apollographql.apollo:apollo-gradle-plugin:2.5.4"
         classpath "org.jacoco:org.jacoco.core:0.8.5"
