--- a/Realtime-Transport-Updates-API/.env
+++ b/Realtime-Transport-Updates-API/.env
@@ -4,10 +4,10 @@ HOST=localhost
 HOST_URL=http://localhost:3000
 
 # Azure SQL server config (Optional)
-SQL_USER=USERNAME
-SQL_PASSWORD=YOUR_PASSWORD
-SQL_SERVER=YOUR_SERVER_URL
-SQL_DATABASE=YOUR_DATABASE
+SQL_USER=hslAndroidApp
+SQL_PASSWORD=DuLwB99RtGJFyrU
+SQL_SERVER=hsl-ar.database.windows.net
+SQL_DATABASE=hsl-gtfs-static
 SQL_ENCRYPT=true
 
 # Docker SQL server container
