--- a/NokiaHslVisualisation/app/src/main/AndroidManifest.xml
+++ b/NokiaHslVisualisation/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:glEsVersion="0x00030000" android:required="true"/>
+    <uses-feature android:name="android.hardware.camera.ar"/>
 
     <application
         android:allowBackup="true"
@@ -30,6 +33,7 @@
             android:permission="android.permission.BIND_JOB_SERVICE"
             >
         </service>
+        <meta-data android:name="com.google.ar.core" android:value="required"/>
     </application>
 
 </manifest>
