--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Realtime-Transport-Updates-API/node_modules/
 Realtime-Transport-Updates-API/.env
 gen/
 .idea/
+NokiaHslVisualisation/gradle.properties
