--- a/.github/workflows/android-workflow.yaml
+++ b/.github/workflows/android-workflow.yaml
@@ -15,6 +15,10 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - name: Access HERE_MAPS_API_KEY
+        env: 
+          HERE_MAPS_API_KEY: ${{ secrets.HERE_MAPS_API_KEY }}
+        run: echo HERE_MAPS_API_KEY=\"$HERE_MAPS_API_KEY\" > .local.properties
 
       - name: Print contents in current directory
         run: ls -la
