--- a/NokiaHslVisualisation/app/src/main/AndroidManifest.xml
+++ b/NokiaHslVisualisation/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
     <uses-feature android:name="android.hardware.camera.ar" />
 
     <application
+        android:name=".HSLVisualisationApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
