--- a/.github/workflows/android-workflow.yaml
+++ b/.github/workflows/android-workflow.yaml
@@ -51,6 +51,10 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - name: Access HERE_MAPS_API_KEY
+        env: 
+          HERE_MAPS_API_KEY: ${{ secrets.HERE_MAPS_API_KEY }}
+        run: cd NokiaHslVisualisation && echo HERE_MAPS_API_KEY=\"$HERE_MAPS_API_KEY\" > ./local.properties
 
       - name: Generate apk
         run: cd NokiaHslVisualisation && ./gradlew assembleDebug
