fixed some data classes to nullable

--- a/NokiaHslVisualisation/app/build.gradle
+++ b/NokiaHslVisualisation/app/build.gradle
@@ -23,7 +23,13 @@ android {
         versionCode 1
         versionName "1.0"
         buildConfigField ("String", "HERE_MAPS_API_KEY", getApiKey())
-
+        kapt {
+            arguments {
+                arg("room.schemaLocation", "$projectDir/schemas".toString())
+                arg("room.incremental", "true")
+                arg("room.expandProjection", "true")
+            }
+        }
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
