--- a/NokiaHslVisualisation/build.gradle
+++ b/NokiaHslVisualisation/build.gradle
@@ -27,6 +27,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
         maven {
             url 'https://api.mapbox.com/downloads/v2/releases/maven'
             authentication {
