--- a/NokiaHslVisualisation/build.gradle
+++ b/NokiaHslVisualisation/build.gradle
@@ -12,7 +12,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "com.apollographql.apollo:apollo-gradle-plugin:2.5.4"
+//        classpath "com.apollographql.apollo:apollo-gradle-plugin:2.5.4"
         classpath "org.jacoco:org.jacoco.core:0.8.5"
         classpath 'com.google.ar.sceneform:plugin:1.17.1'
         def nav_version = "2.3.3"
