--- a/NokiaHslVisualisation/.graphqlconfig
+++ b/NokiaHslVisualisation/.graphqlconfig
@@ -4,7 +4,7 @@
   "extensions": {
     "endpoints": {
       "Default GraphQL Endpoint": {
-        "url": "http://localhost:8080/graphql",
+        "url": "https://api.digitransit.fi/routing/v1/routers/hsl/index/graphql",
         "headers": {
           "user-agent": "JS GraphQL"
         },
