--- a/NokiaHslVisualisation/app/build.gradle
+++ b/NokiaHslVisualisation/app/build.gradle
@@ -11,6 +11,9 @@ apply plugin: 'jacoco'
 apply plugin: 'com.google.ar.sceneform.plugin'
 apply plugin: 'com.apollographql.apollo'
 apply plugin: "androidx.navigation.safeargs.kotlin"
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 
 android {
