refresh button. working ?

--- a/NokiaHslVisualisation/app/build.gradle
+++ b/NokiaHslVisualisation/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id "kotlin-kapt"
     id 'jacoco'
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.4.30'
+    id 'kotlin-android-extensions'
 }
 
 apply plugin: 'jacoco'
