--- a/NokiaHslVisualisation/app/build.gradle
+++ b/NokiaHslVisualisation/app/build.gradle
@@ -154,7 +154,11 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2'
 
-    }
+    // Gson
+    implementation 'com.google.code.gson:gson:2.8.6'
+
+
+}
 
 // Files with such regex patterns are to be excluded
     def fileFilter = ['**/R.class', '**/R$*.class', '**/BuildConfig.*',
