--- a/NokiaHslVisualisation/build.gradle
+++ b/NokiaHslVisualisation/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         }
     }
     dependencies {
+        classpath 'com.google.gms:google-services:4.3.4'
         classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.apollographql.apollo:apollo-gradle-plugin:2.5.5"
