--- a/NokiaHslVisualisation/app/src/main/AndroidManifest.xml
+++ b/NokiaHslVisualisation/app/src/main/AndroidManifest.xml
@@ -26,9 +26,9 @@
     <application
         android:requestLegacyExternalStorage="true"
         android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/launcher_bus_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/launcher_bus_icon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NokiaHslVisualisation"
         android:largeHeap="true">
